// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EMBLDropdown /> should render as invisible 1`] = `
<div
  aria-hidden={true}
  className="masthead-black-bar"
  inert=""
>
  <nav
    className="embl-bar"
    id="embl-dropdown"
  >
    <div
      className="row padding-bottom-medium"
    >
      <div
        className="columns padding-top-medium"
      >
        <button
          aria-label="Close alert"
          className="close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="columns medium-7"
      >
        <div
          className="large-10 medium-12"
        >
          <div
            className="margin-bottom-large padding-top-xsmall margin-top-large"
          >
            <h3
              className="no-underline inline"
              style={
                Object {
                  "lineHeight": "1rem",
                }
              }
            >
              <Memo(Connect(Link))
                href="//embl.org"
              >
                EMBL
              </Memo(Connect(Link))>
            </h3>
             
            was set up in 1974 as Europe’s flagship laboratory for the life sciences – an intergovernmental organisation with more than 80 independent research groups covering the spectrum of molecular biology:
          </div>
        </div>
        <div
          className="row large-up-3 medium-up-3 small-up-2 no-underline medium-11"
        >
          <div
            className="column padding-bottom-medium"
          >
            <Memo(Connect(Link))
              href="//www.embl.de/research/index.php"
            >
              <h5
                className="inline underline"
              >
                Research:
              </h5>
               
              perform basic research in molecular biology
            </Memo(Connect(Link))>
          </div>
          <div
            className="column padding-bottom-medium"
          >
            <Memo(Connect(Link))
              href="//www.embl.de/services/index.html"
            >
              <h5
                className="inline underline"
              >
                Services:
              </h5>
               
              offer vital services to scientists in the member states
            </Memo(Connect(Link))>
          </div>
          <div
            className="column padding-bottom-medium"
          >
            <Memo(Connect(Link))
              href="//www.embl.de/training/index.php"
            >
              <h5
                className="inline underline"
              >
                Training
              </h5>
               
              scientists, students and visitors at all levels
            </Memo(Connect(Link))>
          </div>
          <div
            className="column padding-bottom-medium"
          >
            <Memo(Connect(Link))
              href="//www.embl.de/research/tech_transfer/index.html"
            >
              <h5
                className="inline underline"
              >
                Transfer
              </h5>
               
              and development of technology
            </Memo(Connect(Link))>
          </div>
          <div
            className="column padding-bottom-medium"
          >
            <h5
              className="inline underline"
            >
              Develop
            </h5>
             
            new instruments and methods
          </div>
          <div
            className="column padding-bottom-medium"
          >
            <h5
              className="inline underline"
            >
              Integrating
            </h5>
             
            life science research in Europe
          </div>
        </div>
        <div
          className="margin-top-xlarge no-underline"
        >
          <h3>
            <Memo(Connect(Link))
              className="readmore"
              href="//embl.org"
            >
              More about EMBL
            </Memo(Connect(Link))>
          </h3>
        </div>
      </div>
      <div
        className="columns medium-5"
      >
        <div
          className="large-10 medium-12"
        >
          <h3
            className="inline"
          >
            Six sites
          </h3>
          <p>
            represent EMBL in Europe.
          </p>
        </div>
        <div
          className="row large-up-3 medium-up-2 small-up-2 no-underline medium-11"
        >
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.embl-barcelona.es/"
            >
              <h5
                className="inline underline"
              >
                Barcelona
              </h5>
            </Memo(Connect(Link))>
            <p>
              Tissue biology and disease modelling
            </p>
          </div>
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.embl.fr/"
            >
              <h5
                className="inline underline"
              >
                Grenoble
              </h5>
            </Memo(Connect(Link))>
            <p>
              Structural biology
            </p>
          </div>
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.embl-hamburg.de/"
            >
              <h5
                className="inline underline"
              >
                Hamburg
              </h5>
            </Memo(Connect(Link))>
            <p>
              Structural biology
            </p>
          </div>
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.embl.de/"
            >
              <h5
                className="inline underline"
              >
                Heidelberg
              </h5>
            </Memo(Connect(Link))>
            <p>
              Main laboratory
            </p>
          </div>
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.ebi.ac.uk/"
            >
              <h5
                className="inline underline"
              >
                Hinxton
              </h5>
            </Memo(Connect(Link))>
            <p
              className="margin-bottom-none"
            >
              EMBL-EBI: European Bioinformatics Institute
            </p>
          </div>
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.embl.it/"
            >
              <h5
                className="inline underline"
              >
                Rome
              </h5>
            </Memo(Connect(Link))>
            <p>
              Epigenetics and neurobiology
            </p>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`<EMBLDropdown /> should render as visible 1`] = `
<div
  aria-hidden={false}
  className="masthead-black-bar visible"
>
  <nav
    className="embl-bar"
    id="embl-dropdown"
  >
    <div
      className="row padding-bottom-medium"
    >
      <div
        className="columns padding-top-medium"
      >
        <button
          aria-label="Close alert"
          className="close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="columns medium-7"
      >
        <div
          className="large-10 medium-12"
        >
          <div
            className="margin-bottom-large padding-top-xsmall margin-top-large"
          >
            <h3
              className="no-underline inline"
              style={
                Object {
                  "lineHeight": "1rem",
                }
              }
            >
              <Memo(Connect(Link))
                href="//embl.org"
              >
                EMBL
              </Memo(Connect(Link))>
            </h3>
             
            was set up in 1974 as Europe’s flagship laboratory for the life sciences – an intergovernmental organisation with more than 80 independent research groups covering the spectrum of molecular biology:
          </div>
        </div>
        <div
          className="row large-up-3 medium-up-3 small-up-2 no-underline medium-11"
        >
          <div
            className="column padding-bottom-medium"
          >
            <Memo(Connect(Link))
              href="//www.embl.de/research/index.php"
            >
              <h5
                className="inline underline"
              >
                Research:
              </h5>
               
              perform basic research in molecular biology
            </Memo(Connect(Link))>
          </div>
          <div
            className="column padding-bottom-medium"
          >
            <Memo(Connect(Link))
              href="//www.embl.de/services/index.html"
            >
              <h5
                className="inline underline"
              >
                Services:
              </h5>
               
              offer vital services to scientists in the member states
            </Memo(Connect(Link))>
          </div>
          <div
            className="column padding-bottom-medium"
          >
            <Memo(Connect(Link))
              href="//www.embl.de/training/index.php"
            >
              <h5
                className="inline underline"
              >
                Training
              </h5>
               
              scientists, students and visitors at all levels
            </Memo(Connect(Link))>
          </div>
          <div
            className="column padding-bottom-medium"
          >
            <Memo(Connect(Link))
              href="//www.embl.de/research/tech_transfer/index.html"
            >
              <h5
                className="inline underline"
              >
                Transfer
              </h5>
               
              and development of technology
            </Memo(Connect(Link))>
          </div>
          <div
            className="column padding-bottom-medium"
          >
            <h5
              className="inline underline"
            >
              Develop
            </h5>
             
            new instruments and methods
          </div>
          <div
            className="column padding-bottom-medium"
          >
            <h5
              className="inline underline"
            >
              Integrating
            </h5>
             
            life science research in Europe
          </div>
        </div>
        <div
          className="margin-top-xlarge no-underline"
        >
          <h3>
            <Memo(Connect(Link))
              className="readmore"
              href="//embl.org"
            >
              More about EMBL
            </Memo(Connect(Link))>
          </h3>
        </div>
      </div>
      <div
        className="columns medium-5"
      >
        <div
          className="large-10 medium-12"
        >
          <h3
            className="inline"
          >
            Six sites
          </h3>
          <p>
            represent EMBL in Europe.
          </p>
        </div>
        <div
          className="row large-up-3 medium-up-2 small-up-2 no-underline medium-11"
        >
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.embl-barcelona.es/"
            >
              <h5
                className="inline underline"
              >
                Barcelona
              </h5>
            </Memo(Connect(Link))>
            <p>
              Tissue biology and disease modelling
            </p>
          </div>
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.embl.fr/"
            >
              <h5
                className="inline underline"
              >
                Grenoble
              </h5>
            </Memo(Connect(Link))>
            <p>
              Structural biology
            </p>
          </div>
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.embl-hamburg.de/"
            >
              <h5
                className="inline underline"
              >
                Hamburg
              </h5>
            </Memo(Connect(Link))>
            <p>
              Structural biology
            </p>
          </div>
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.embl.de/"
            >
              <h5
                className="inline underline"
              >
                Heidelberg
              </h5>
            </Memo(Connect(Link))>
            <p>
              Main laboratory
            </p>
          </div>
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.ebi.ac.uk/"
            >
              <h5
                className="inline underline"
              >
                Hinxton
              </h5>
            </Memo(Connect(Link))>
            <p
              className="margin-bottom-none"
            >
              EMBL-EBI: European Bioinformatics Institute
            </p>
          </div>
          <div
            className="column"
          >
            <Memo(Connect(Link))
              href="//www.embl.it/"
            >
              <h5
                className="inline underline"
              >
                Rome
              </h5>
            </Memo(Connect(Link))>
            <p>
              Epigenetics and neurobiology
            </p>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
